[build-system]
requires = ["setuptools>=61.0", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "eq-files"
dynamic = ["version"]
description = "Python script to check file equality"
readme = "README.md"
requires-python = ">=3.7"

authors = [
  { name = "Oleg Dudnik", email = "Oleggelo86@gmail.com" }
]

dependencies = [
  # "requests>=2.0",
]

[project.scripts]
eq-files = "eq_files.cmd:cmd_is_eq_files"

[project.optional-dependencies]
dev = [
  "pytest",
  "build"
]

[tool.setuptools.packages.find]
include = ["eq_files*"]

[tool.setuptools.package-data]
"*" = ["py.typed"]

[tool.setuptools_scm]
